--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "author": "Chambers",
   "license": "GPL",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "dotenv": "^10.0.0",
     "express": "^4.18.1",
-    "express-async-error": "^0.0.2",
+    "express-async-errors": "^3.1.1",
     "express-rate-limit": "^6.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
     "mongoose-sequence": "^5.3.1",
     "uuid": "^9.0.0"
